--- a/flow/Makefile
+++ b/flow/Makefile
@@ -102,7 +102,27 @@
 #DESIGN_CONFIG=./designs/ihp-sg13g2/riscv32i/config.mk
 
 # Default design
-DESIGN_CONFIG ?= ./designs/nangate45/gcd/config.mk
+# DESIGN_CONFIG ?= ./designs/nangate45/gcd/config.mk
+# DESIGN_CONFIG=./designs/asap7/aes_final/config_flute.mk
+# DESIGN_CONFIG = ./designs/asap7/aes_final/config_hyb.mk
+# DESIGN_CONFIG = ./designs/asap7/aes_final/config_hyb2.mk
+# DESIGN_CONFIG = ./designs/asap7/aes_final/config_hyb2_new.mk
+# DESIGN_CONFIG = ./designs/asap7/ibex_final/config_flute.mk
+# DESIGN_CONFIG = ./designs/asap7/ibex_final/config_hyb.mk
+# DESIGN_CONFIG = ./designs/asap7/ibex_final/config_hyb2.mk
+# DESIGN_CONFIG = ./designs/asap7/ibex_final/config_hybrest.mk
+# DESIGN_CONFIG = ./designs/asap7/jpeg_final/config_flute.mk
+# DESIGN_CONFIG = ./designs/asap7/jpeg_final/config_hyb.mk
+# DESIGN_CONFIG = ./designs/asap7/riscv32i_final/config_flute.mk
+# DESIGN_CONFIG = ./designs/asap7/riscv32i_final/config_hyb.mk
+DESIGN_CONFIG = ./designs/asap7/${MYFOLDER}/${MYFILE}
+# DESIGN_CONFIG = ./designs/asap7/ethmac_final/config_hyb.mk
+# DESIGN_CONFIG = ./designs/asap7/ethmac_final/config_hyb2.mk
+# DESIGN_CONFIG = ./designs/asap7/ethmac_final/config_hyb3.mk
+# DESIGN_CONFIG = ./designs/asap7/ethmac_final/config_hybrest.mk
+
+
+
 
 # Default TNS_END_PERCENT value
 export TNS_END_PERCENT ?=5
@@ -111,6 +131,9 @@ export TNS_END_PERCENT ?=5
 ifndef DISPLAY
 export QT_QPA_PLATFORM ?= offscreen
 endif
+
+# My custom settings
+export QT_QPA_PLATFORM = offscreen
 
 # ==============================================================================
 #  ____  _____ _____ _   _ ____
