--- a/flow/Makefile_run
+++ b/flow/Makefile_run
@@ -1,5 +1,5 @@
-FOLDERS=(aes_final ethmac_final ibex_final jpeg_final riscv32i_final)
-FILES=(config_flute.mk config_hyb.mk config_hyb2.mk)
+FOLDERS=(_aes _ethmac _ibex _jpeg _riscv32i)
+FILES=(config_rest.mk)
 
 for FOLDER in "${FOLDERS[@]}"; do
 	for FILE in "${FILES[@]}"; do
@@ -9,3 +9,15 @@ for FOLDER in "${FOLDERS[@]}"; do
 		make MYFOLDER=$FOLDER MYFILE=$FILE
 	done
 done
+
+# FOLDERS=(_aes _ethmac _ibex _jpeg _riscv32i)
+# FILES=(config_all_pl0p2.mk config_all_pl0p5.mk config_all_pl0p7.mk config_flute.mk config_pd.mk config_rest.mk config_all.mk)
+
+# for FOLDER in "${FOLDERS[@]}"; do
+# 	for FILE in "${FILES[@]}"; do
+# 		echo "make clean clean_all MYFOLDER=$FOLDER MYFILE=$FILE"
+# 		make clean clean_all MYFOLDER=$FOLDER MYFILE=$FILE
+# 		echo "make MYFOLDER=$FOLDER MYFILE=$FILE"
+# 		make MYFOLDER=$FOLDER MYFILE=$FILE
+# 	done
+# done
