--- a/flow/Makefile_run2
+++ b/flow/Makefile_run2
@@ -1,5 +1,5 @@
-FOLDERS=(aes_final ethmac_final ibex_final jpeg_final riscv32i_final)
-FILES=(config_hyb.mk config_hyb2.mk)
+FOLDERS=(_ethmac)
+FILES=(config_all_pl0p3.mk config_all_pl0p5.mk config_all_pl0p7.mk config_flute.mk config_pd.mk config_rest.mk config_all.mk)
 
 for FOLDER in "${FOLDERS[@]}"; do
 	for FILE in "${FILES[@]}"; do
